--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,11 +27,13 @@ body.bg-orange {
   background: #ef6c00;
 }
 
+h1, h2, form {
+  color: #ffffff;
+  font-family: Helvetica, Arial, sans-serif;
+}
 h1 {
   margin: 30vh auto 0;
   padding: 0 10vw;
-  color: #ffffff;
-  font-family: Helvetica, Arial, sans-serif;
   font-size: 8vh;
   line-height: 1.3;
   letter-spacing: 0.03em;
